# namaki

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  broker.py  client.py  config.yml  layer.py  messages.proto  messages_pb2.py  proxy-env.py  run.py  setup-proxy-dependencies.py
namaki/: layer.py  run.py
namaki/client/: CMakeLists.txt  README.md  db-init.sql  install-protobuf.sh
namaki/client/namaki/: client.cpp  client.h  client.py  connector.cpp  connector.h  contact.cpp  contact.h  database.cpp  database.h  initialization.sql  main.cpp  message.cpp  message.h  messages.h  messages.pb.cc  messages.pb.h  messages.proto  messages_pb2.py
namaki/client/tests/: database_test.cpp  init.sql
namaki/client/tests/data/: db-fixture.sh
namaki/protobuf/: messages.proto
namaki/server/: README.md  layer.py  message.py
src/: connector.cpp  database.cpp  database.h  proxy.h
src/proxy/: README.md  broker.py  proxy.cpp
tests/: CMakeLists.txt
